# wtlang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test_key.wt  test_validation_errors.wt
crates/wtlang-compiler/: Cargo.toml
crates/wtlang-compiler/src/: codegen.rs  codegen_legacy.rs  main.rs
crates/wtlang-core/: Cargo.toml
crates/wtlang-core/src/: ast.rs  errors.rs  ir.rs  lexer.rs  lib.rs  parser.rs  semantics.rs  symbols.rs
crates/wtlang-core/src/ir/: builder.rs  module.rs  nodes.rs  types.rs
crates/wtlang-lsp/: Cargo.toml
crates/wtlang-lsp/src/: main.rs
doc/: IMPLEMENTATION.md  TODO.md  builtin_query_language.md  codegen_refactoring_design.md  compiler_tools_design.md  error_codes.md  error_system_integration.md  keys_and_refs.md  language_design.md  lsp_implementation_summary.md  lsp_installation.md  lsp_step14_summary.md  query_language_implementation_plan.md  step15_comprehensive_review.md  summary.md  syntax_reference.md  target_platform_design.md  testing_strategy.md  tutorial.md
examples/: 01_hello.wt  02_tables.wt  03_chaining.wt  04_multi_page.wt  05_external_functions.wt  06_validation.wt  07_filters.wt  08_scoping_test.wt  09_query_language.wt  10_keys_and_refs.wt  README.md  simple_scoping.wt  test_decl_only.wt
examples/data/: employees.csv  orders.csv  products.csv  users.csv
scripts/: test_examples.ps1
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
tests/fixtures/invalid/: syntax_error.wt  type_mismatch.wt  undefined_var.wt  uninitialized.wt
tests/fixtures/valid/: simple_page.wt  syntax_complete.wt  with_table.wt
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: wtlang.tmLanguage.json
