[workspace]
resolver = "2"
members = [
    "crates/wtlang-core",
    "crates/wtlang-compiler",
    "crates/wtlang-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WTLang Contributors"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
