[package]
name = "wtlang-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for WTLang compiler and tools"

[dependencies]
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "wtlang_core"
path = "src/lib.rs"
